[package]
name = "sprint-client"
version = "0.1.0"
authors = [
    "Alex Nielsen <alex@hitecherik.net>",
    "Ivan Kapelyukh <ivankapelyukh@gmail.com>",
    "Pablo Gamito <pablo@gamito.me>",
    "Tom Claydon <tom@claydon.me.uk>",
    "Zak Cutner <me@zakcutner.uk>"
]
edition = "2018"

[dependencies]
askama = "0.8.0"
structopt = { version = "0.3", default-features = false }
ctrlc = "3.1.3"
chrono = "0.4.9"
rustyline = "5.0.4"
hex = "0.4.0"
tempfile = "3.1.0"
sprintc = { path = "../sprintc" }
sprint-move = { path = "../move" }
client = { git = "https://github.com/libra/libra" }
libra-logger = { git = "https://github.com/libra/libra" }
libra-wallet = { git = "https://github.com/libra/libra" }
compiler = { git = "https://github.com/libra/libra" }
libra-types = { git = "https://github.com/libra/libra" }
