[package]
name = "sprint-move"
version = "0.1.0"
authors = [
    "Alex Nielsen <alex@hitecherik.net>",
    "Ivan Kapelyukh <ivankapelyukh@gmail.com>",
    "Pablo Gamito <pablo@gamito.me>",
    "Tom Claydon <tom@claydon.me.uk>",
    "Zak Cutner <me@zakcutner.uk>"
]
edition = "2018"

[dependencies]
askama = "0.8"
colored = "1.8"
functional_tests = { git = "https://github.com/libra/libra" }
rand = "0.7"
sprint-parser = {path = "../parser"}
