[package]
name = "sprint-parser"
version = "0.1.0"
authors = [
    "Alex Nielsen <alex@hitecherik.net>",
    "Ivan Kapelyukh <ivankapelyukh@gmail.com>",
    "Pablo Gamito <pablo@gamito.me>",
    "Tom Claydon <tom@claydon.me.uk>",
    "Zak Cutner <me@zakcutner.uk>"
]
edition = "2018"

[dependencies]
nom = "5.0.1"
nom_locate = "1.0.0"
phf = { version = "0.8.0", features = [ "macros" ] }

[dev-dependencies]
indoc = "0.3.4"
